[gd_scene load_steps=3 format=3 uid="uid://belkug6sa4arr"]

[ext_resource type="Script" path="res://addons/mpf-gmc/slides/startup.gd" id="1_cfjlx"]
[ext_resource type="Texture2D" uid="uid://dounln3l35d26" path="res://addons/mpf-gmc/images/logo_mpf.png" id="2_v374h"]

[node name="MPFSlide" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfjlx")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -137.0
offset_right = 110.0
offset_bottom = 137.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 300)
layout_mode = 2
texture = ExtResource("2_v374h")
stretch_mode = 3

[node name="status_main" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Loading Stuff"
horizontal_alignment = 1

[node name="status_sub" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Loading Stuff"
horizontal_alignment = 1

[node name="error_main" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Loading Stuff"
horizontal_alignment = 1

[node name="error_sub" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Loading Stuff"
horizontal_alignment = 1

[node name="version" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 2
